--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="service-card">
       <img src="fea.jpg" alt="Finite element analysis" />
       <h3>இறுதி கூறு பகுப்பாய்வு</h3><br>
-      <button><a href="fea.html">மேலும் அறிக</a></button>
+      <button><a href="Fea.html">மேலும் அறிக</a></button>
     </div>
     <div class="service-card">
       <img src="software.jpg" alt="Softwares Used"/>
