--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="service-card">
       <img src="pipeline engineering1.PNG" alt="Pipeline engineering" />
       <h3>பைப்லைன் இன்ஜினியரிங்</h3><br>
-      <button onclick="window.location.href='pipeline.html';"><a href="pipeline engineering.html">மேலும் அறிக</a></button>
+      <button onclick="window.location.href='pipeline engineering.html';"><a href="pipeline engineering.html">மேலும் அறிக</a></button>
     </div>
     <div class="service-card">
       <img src="electrical.png" alt="Electrical instrumentation" />
