--- a/index.html
+++ b/index.html
@@ -130,29 +130,33 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="service-card">
       <img src="mechanical.png" alt="Mechanical Department" />
       <h3>இயந்திரத் தாவரம் & வடிவமைப்பு</h3>
-      <button onclick="window.location.href='mechanical.html';"><a href="mechanical.html">மேலும் அறிக</a></button>
+      <button onclick="window.location.href='mechanical.html';">
+        <a href="mechanical.html">மேலும் அறிக</a></button>
     </div>
 
     <div class="service-card">      
       <img src="process.png" alt="Process Department" />
       <h3>செயல்முறை பொறியியல்</h3><br>
-      <button onclick="window.location.href='process department.html';"><a href="process department.html">மேலும் அறிக</a></button>
+      <button onclick="window.location.href='process department.html';">
+        <a href="process department.html">மேலும் அறிக</a></button>
     </div>
 
     <div class="service-card">
       <img src="Civil and StructuralDesign.png" alt="Civil Department" />
       <h3>சிவில் இன்ஜினியரிங்</h3><br>
-      <button onclick="window.location.href='civil engineering.html';"><a href="civil engineering.html">மேலும் அறிக</a></button>
+      <button onclick="window.location.href='civil engineering.html';">
+        <a href="civil engineering.html">மேலும் அறிக</a></button>
     </div>
     <div class="service-card">
       <img src="pipeline engineering1.PNG" alt="Pipeline engineering" />
       <h3>பைப்லைன் இன்ஜினியரிங்</h3><br>
-      <button onclick="window.location.href='pipeline engineering.html';"><a href="pipeline engineering.html">மேலும் அறிக</a></button>
+      <button>
+        <a href="pipeline engineering.html">மேலும் அறிக</a></button>
     </div>
     <div class="service-card">
       <img src="electrical.png" alt="Electrical instrumentation" />
-      <h3>மின் சாதனங்கள்&கட்டுப்பாடு</h3>
-      <button onclick="window.location.href='electrical instrumentation.html';">
+      <h3>மின் சாதனங்கள் & கட்டுப்பாடு</h3>
+      <button>
         <a href="electrical instrumentation.html">மேலும் அறிக</a></button>
     </div>
 
@@ -169,7 +173,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="service-card">
       <img src="software.jpg" alt="Softwares Used"/>
       <h3>பயன்படுத்தப்படும் மென்பொருள்கள்</h3>
-      <button onclick="window.location.href='software used.html';">
+      <button>
         <a href="software used.html">மேலும் அறிக</a></button>
     </div>
     <div class="service-card">
