--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
 			</div>  
 			<div class="footer2">
 				<div class="footer-address">
-				  <p>&copy; © 2024 ஸ்ரீரங்கன் கிரியேஷன் பிரைவேட் லிமிடெட்,<br>
+				  <p>&copy; 2024 ஸ்ரீரங்கன் கிரியேஷன் பிரைவேட் லிமிடெட்,<br>
 எண் 5/181, பெரியார் தெரு, மேடவாக்கம்,<br>
 சென்னை, தமிழ்நாடு 600100.இந்தியா
 				</div>
